--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
 
         <!-- Les personnes a contacter -->
-        <section id="portfolio" class="site-section section-portfolio">
+        <section class="site-section section-portfolio">
             <div class="container">
                 <div class="text-center">
                     <h3>REFERENCES</h3>
@@ -409,7 +409,6 @@
         </div>
         </div>
       </div>
-    </div>
 
     <div id="portfolioItem4" class="modal fade" role="dialog">
       <div class="modal-dialog">
@@ -438,7 +437,6 @@
           </div>
           </div>
         </div>
-      </div>
     </div>
     <div id="portfolioItem6" class="modal fade" role="dialog">
       <div class="modal-dialog">
